# opencv_viodeo_

./: CMakeLists.txt
src/: config.h.in  main.cpp
